syntax = "proto3";

package backend;

service BackendService {
    rpc Pin(PinReq) returns (PinResp) {}
    rpc Scrape(ScrapeReq) returns (ScrapeResp) {}
}

message ScrapeReq {
    string id = 1;
    string url = 2;
}

message ScrapeResp {
    string id = 1;
    string archive_url = 2;
    string hash = 3;
}

message PinReq {
    string id = 1;
    string hash = 2;
}

message PinResp {
    string id = 1;
}